floating point operation
https://www.keil.com/support/man/docs/armcc/armcc_chr1359124234797.htm
Cortex-M4.fp.sp	FPv4-SP

--- a/keil/deepsleep_wake.uvprojx
+++ b/keil/deepsleep_wake.uvprojx
@@ -423,6 +423,11 @@
               <FileType>1</FileType>
               <FilePath>..\..\..\..\..\..\utils\am_util_delay.c</FilePath>
             </File>
+            <File>
+              <FileName>am_util_faultisr.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\..\..\..\utils\am_util_faultisr.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
