[Keil] import freeRTOS related files into Keil project

--- a/keil/deepsleep_wake.uvprojx
+++ b/keil/deepsleep_wake.uvprojx
@@ -337,9 +337,9 @@
             <v6Rtti>0</v6Rtti>
             <VariousControls>
               <MiscControls></MiscControls>
-              <Define>AM_PRINTF_BUFSIZE=256 AM_PART_APOLLO4B AM_PACKAGE_BGA keil</Define>
+              <Define>AM_PRINTF_BUFSIZE=256 AM_PART_APOLLO4B AM_PACKAGE_BGA AM_FREERTOS keil</Define>
               <Undefine></Undefine>
-              <IncludePath>../../../../../..;../../../../../../CMSIS/ARM/Include;../../../../bsp;../../../../../../CMSIS/AmbiqMicro/Include;../../../../../../devices;../../../../../../utils;../../../../../../mcu/apollo4b;../src</IncludePath>
+              <IncludePath>../../../../../..;../../../../../../CMSIS/ARM/Include;../../../../bsp;../../../../../../CMSIS/AmbiqMicro/Include;../../../../../../devices;../../../../../../utils;../../../../../../mcu/apollo4b;../src;../../../../../../third_party/FreeRTOSv10.1.1/Source/portable/Keil/AMapollo4;../../../../../../third_party/FreeRTOSv10.1.1/Source/include</IncludePath>
             </VariousControls>
           </Cads>
           <Aads>
@@ -408,6 +408,11 @@
               <FileType>1</FileType>
               <FilePath>..\..\..\..\..\..\mcu\apollo4b\hal\mcu\am_hal_iom.c</FilePath>
             </File>
+            <File>
+              <FileName>rtos.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\src\rtos.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
@@ -452,6 +457,46 @@
               <FileName>libam_bsp.lib</FileName>
               <FileType>4</FileType>
               <FilePath>../../../../bsp/keil/bin/libam_bsp.lib</FilePath>
+            </File>
+          </Files>
+        </Group>
+        <Group>
+          <GroupName>freeRTOS</GroupName>
+          <Files>
+            <File>
+              <FileName>port.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\..\..\..\third_party\FreeRTOSv10.1.1\Source\portable\Keil\AMapollo4\port.c</FilePath>
+            </File>
+            <File>
+              <FileName>heap_4.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\..\..\..\third_party\FreeRTOSv10.1.1\Source\portable\MemMang\heap_4.c</FilePath>
+            </File>
+            <File>
+              <FileName>event_groups.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\..\..\..\third_party\FreeRTOSv10.1.1\Source\event_groups.c</FilePath>
+            </File>
+            <File>
+              <FileName>list.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\..\..\..\third_party\FreeRTOSv10.1.1\Source\list.c</FilePath>
+            </File>
+            <File>
+              <FileName>queue.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\..\..\..\third_party\FreeRTOSv10.1.1\Source\queue.c</FilePath>
+            </File>
+            <File>
+              <FileName>tasks.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\..\..\..\third_party\FreeRTOSv10.1.1\Source\tasks.c</FilePath>
+            </File>
+            <File>
+              <FileName>timers.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\..\..\..\third_party\FreeRTOSv10.1.1\Source\timers.c</FilePath>
             </File>
           </Files>
         </Group>
