--- a/keil/deepsleep_wake.uvprojx
+++ b/keil/deepsleep_wake.uvprojx
@@ -337,7 +337,7 @@
             <v6Rtti>0</v6Rtti>
             <VariousControls>
               <MiscControls></MiscControls>
-              <Define>AM_PRINTF_BUFSIZE=256 AM_PART_APOLLO4B AM_PACKAGE_BGA AM_FREERTOS SEC_ECC_CFG=SEC_ECC_CFG_HCI keil</Define>
+              <Define>AM_PART_APOLLO4B AM_PACKAGE_BGA AM_FREERTOS SEC_ECC_CFG=SEC_ECC_CFG_HCI keil</Define>
               <Undefine></Undefine>
               <IncludePath>../../../../../..;../../../../../../CMSIS/ARM/Include;../../../../bsp;../../../../../../CMSIS/AmbiqMicro/Include;../../../../../../devices;../../../../../../utils;../../../../../../mcu/apollo4b;../src;../../../../../../third_party/FreeRTOSv10.1.1/Source/portable/Keil/AMapollo4;../../../../../../third_party/FreeRTOSv10.1.1/Source/include;../../../../../../third_party/cordio/ble-host/sources/sec/common;../../../../../../third_party/cordio/ble-profiles/sources/profiles/hrps;../../../../../../third_party/cordio/ble-profiles/include/app;../../../../../../third_party/uecc;../../../../../../third_party/cordio/ble-host/sources/stack/smp;../../../../../../third_party/cordio/ble-host/sources/stack/l2c;../../../../../../third_party/cordio/ble-host/sources/hci/ambiq/cooper;../../../../../../third_party/cordio/wsf/sources;../../../../../../third_party/cordio/ble-profiles/sources/profiles/hid;../../../../../../third_party/cordio/ble-profiles/sources/profiles/gatt;../../../../../../third_party/cordio/ble-profiles/sources/services;../../../../../../third_party/cordio/ble-profiles/sources/profiles/bas;../../../../../../third_party/cordio/ble-profiles/sources/profiles;../../../../../../third_party/cordio/ble-host/sources/hci/ambiq;../../../../../../third_party/cordio/wsf/include;../../../../../../third_party/cordio/ble-profiles/sources/profiles/uribeacon;../../../../../../third_party/cordio/ble-host/include;../../../../../../third_party/cordio/ble-profiles/sources/profiles/gap;../../../../../../third_party/cordio/ble-host/sources/stack/dm;../../../../../../third_party/cordio/ble-profiles/sources/apps;../../../../../../third_party/cordio/ble-host/sources/stack/hci;../../../../../../third_party/cordio/ble-profiles/sources/apps/app;../../../../../../third_party/cordio/ble-profiles/sources/apps/fit;../../../../../../third_party/cordio/ble-profiles/sources/profiles/include;../../../../../../third_party/cordio/ble-profiles/sources/profiles/rscp;../../../../../../third_party/cordio/ble-host/sources/stack/att;../../../../../../third_party/cordio/ble-host/sources/stack/cfg;../../../../../../third_party/cordio/wsf/sources/util;../../../../../../third_party/cordio/wsf/sources/port/freertos</IncludePath>
             </VariousControls>
@@ -407,6 +407,57 @@
               <FileName>am_hal_iom.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\..\..\..\..\..\mcu\apollo4b\hal\mcu\am_hal_iom.c</FilePath>
+              <FileOption>
+                <CommonProperty>
+                  <UseCPPCompiler>2</UseCPPCompiler>
+                  <RVCTCodeConst>0</RVCTCodeConst>
+                  <RVCTZI>0</RVCTZI>
+                  <RVCTOtherData>0</RVCTOtherData>
+                  <ModuleSelection>0</ModuleSelection>
+                  <IncludeInBuild>0</IncludeInBuild>
+                  <AlwaysBuild>0</AlwaysBuild>
+                  <GenerateAssemblyFile>2</GenerateAssemblyFile>
+                  <AssembleAssemblyFile>2</AssembleAssemblyFile>
+                  <PublicsOnly>2</PublicsOnly>
+                  <StopOnExitCode>11</StopOnExitCode>
+                  <CustomArgument></CustomArgument>
+                  <IncludeLibraryModules></IncludeLibraryModules>
+                  <ComprImg>1</ComprImg>
+                </CommonProperty>
+                <FileArmAds>
+                  <Cads>
+                    <interw>2</interw>
+                    <Optim>0</Optim>
+                    <oTime>2</oTime>
+                    <SplitLS>2</SplitLS>
+                    <OneElfS>2</OneElfS>
+                    <Strict>2</Strict>
+                    <EnumInt>2</EnumInt>
+                    <PlainCh>2</PlainCh>
+                    <Ropi>2</Ropi>
+                    <Rwpi>2</Rwpi>
+                    <wLevel>0</wLevel>
+                    <uThumb>2</uThumb>
+                    <uSurpInc>2</uSurpInc>
+                    <uC99>2</uC99>
+                    <uGnu>2</uGnu>
+                    <useXO>2</useXO>
+                    <v6Lang>0</v6Lang>
+                    <v6LangP>0</v6LangP>
+                    <vShortEn>2</vShortEn>
+                    <vShortWch>2</vShortWch>
+                    <v6Lto>2</v6Lto>
+                    <v6WtE>2</v6WtE>
+                    <v6Rtti>2</v6Rtti>
+                    <VariousControls>
+                      <MiscControls></MiscControls>
+                      <Define></Define>
+                      <Undefine></Undefine>
+                      <IncludePath></IncludePath>
+                    </VariousControls>
+                  </Cads>
+                </FileArmAds>
+              </FileOption>
             </File>
             <File>
               <FileName>rtos.c</FileName>
@@ -422,6 +473,11 @@
               <FileName>am_hal_cmdq.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\..\..\..\..\..\mcu\apollo4b\hal\mcu\am_hal_cmdq.c</FilePath>
+            </File>
+            <File>
+              <FileName>radio_task.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\src\radio_task.c</FilePath>
             </File>
           </Files>
         </Group>
